#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(helloworld.c, 1.0)
AM_INIT_AUTOMAKE(helloworld, 1.0)

#下面两句运行到后面会提示参数警告
#AC_INIT(helloworld.c)
#AM_INIT_AUTOMAKE(helloworld, 1.0)

#AC_CONFIG_SRCDIR([helloworld.c])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
